--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  demoflu: #2.4.0
-    path: ../demoflu/
+  demoflu: 2.5.0
+    #path: ../demoflu/
 
 dev_dependencies:
   flutter_test:
@@ -42,7 +42,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.1
+  flutter_lints: ^5.0.0
 
 flutter:
 
